k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myapp-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: myapp

  template:
    metadata:
      labels:
        app: myapp

    spec:
      containers:
      - name: myapp
        image: efrozkhan6194/mysite:22

        ports:
        - containerPort: 80
